--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>Мандаринки*:･ﾟ✧</h1>
 <p>Я просто ОБОЖАЮ мандаринки(ﾉ◕ヮ◕)ﾉ</p>
 <img src = "https://ru.hellomagazine.com/images/2014/december/editors/dasha/mandarin24122014-fix.jpg"/> 
-<p>hi</p>
+<p>Они такие лапотьки, просто увеличь картинку, представь, что они живые и погдадь их курсором(/>.<\)</p>
