--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <h1>Милые мандаринки*:･ﾟ✧</h1>
   <p>Я просто ОБОЖАЮ мандаринки! Они очень милые(ﾉ◕ヮ◕)ﾉ</p>
-  <p>Не веришь? :O</p>
+  <p>Не веришь в их милашность? :O</p>
   <img src = "https://ru.hellomagazine.com/images/2014/december/editors/dasha/mandarin24122014-fix.jpg"/> 
   <p>Просто увеличь картинку, представь, что они живые и погдадь их курсором(/>.<\)</p>
-  <p>~                       Ну как тебе? Убедисля?(≧◡≦)</p>
+  <p>~ Ну как тебе? Убедисля в их милоте?(≧◡≦)</p>
+  <p>До сих пор нет?ヽ(ﾟ〇ﾟ)ﾉ</p>
+  <p>Сейчас ты узнаешь, НАСКОЛЬКО мандаринки милые(｀皿´＃)</p>
 </html>
