--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <h1>Милые мандаринки*:･ﾟ✧</h1>
-  <p>Я просто ОБОЖАЮ мандаринки! Они очень милые(ﾉ◕ヮ◕)ﾉ</p>
+  <p>Я просто ОБOЖАЮ мандаринки! Они очень милые(ﾉ◕ヮ◕)ﾉ</p>
   <p>Не веришь в их милашность? :O</p>
   <img src = "https://ru.hellomagazine.com/images/2014/december/editors/dasha/mandarin24122014-fix.jpg"/> 
   <p>Просто увеличь картинку, представь, что они живые и погдадь их курсором(/>.<\)</p>
   <p>~ Ну как тебе? Убедисля в их милоте?(≧◡≦)</p>
   <p>До сих пор нет?ヽ(ﾟ〇ﾟ)ﾉ</p>
   <p>Сейчас ты узнаешь, НАСКОЛЬКО мандаринки милые(｀皿´＃)</p>
+  <img src = "https://www.google.com/url?sa=i&url=https%3A%2F%2Fpxhere.com%2Fru%2Fphoto%2F1189532&psig=AOvVaw3IGqGyI8qXZiUL-aKXOPC0&ust=1612075406309000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIDY_YyHw-4CFQAAAAAdAAAAABAD"/>
 </html>
