--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <p>Извини... ┬─┬ノ(º _ ºノ)</p>
   <p>Ну раз ты не хочешь считать, что съедобные мандаринки милые, то как тебе утки-мандаринки? (͡° ͜ʖ ͡°)</>
   <img src = "https://d-static.karusel-tv.ru/media/suit/preview_full/media/text/2019/04/1554126613944451_shutterstock_89751028.jpg?bd286ba"/>
+  <p>Узнай о них больше ниже 〆(・∀・)</p>
   <a href = "https://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D0%B8%D0%BD%D0%BA%D0%B0_(%D0%BF%D1%82%D0%B8%D1%86%D0%B0)">Википедия этих красавиц</a>
   <a href = "https://ru.depositphotos.com/stock-photos/%D1%83%D1%82%D0%BE%D1%87%D0%BA%D0%B8-%D0%BC%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D0%B8%D0%BD%D0%BA%D0%B8.html">Наслосись их милотой)</a>
   <p>Если тебе и это не понравилось, то я сдаюсь (oT-T)尸</p>
